fix: remoção de scroll em overflow-y

--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ body {
     list-style: none;
     width: 100%;
     max-height: 150px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .download-list__item {
